[gd_scene load_steps=5 format=3 uid="uid://ctnl3cod44sav"]

[ext_resource type="Script" uid="uid://cbtnhe5agafbf" path="res://scripts/game_manager.gd" id="1_3c3go"]
[ext_resource type="PackedScene" uid="uid://cj1kfmbkuqhx4" path="res://scene/player.tscn" id="2_a81tu"]
[ext_resource type="Script" uid="uid://57a6i15hxohx" path="res://scripts/enemies.gd" id="3_hy1te"]
[ext_resource type="Script" uid="uid://dmqnanbxjdp26" path="res://scripts/uiManager.gd" id="4_8cna3"]

[node name="GameManager" type="Node" node_paths=PackedStringArray("player_character", "ai_character")]
script = ExtResource("1_3c3go")
player_character = NodePath("Player")
ai_character = NodePath("AI")

[node name="Player" parent="." instance=ExtResource("2_a81tu")]
position = Vector2(198, 339)
x = 200
y = 200

[node name="AI" parent="." instance=ExtResource("2_a81tu")]
position = Vector2(379, 334)
script = ExtResource("3_hy1te")
x = 400
y = 200

[node name="HUD" type="CanvasLayer" parent="." node_paths=PackedStringArray("GM")]
script = ExtResource("4_8cna3")
GM = NodePath("..")

[node name="MessageTimer" type="Timer" parent="HUD"]

[node name="Turn" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0"

[node name="StartButton" type="Button" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Next"

[node name="Message" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_top = 75.0
offset_right = 148.0
offset_bottom = 163.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Your turn"

[connection signal="next_turn" from="HUD" to="." method="_on_hud_next_turn"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_start_button_pressed"]

[editable path="AI"]
